Added icons and changed them to a smaller sized with css

--- a/index.html
+++ b/index.html
@@ -1,82 +1,188 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Accordion - Default functionality</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+  <title>Weather App</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="api.openweathermap.org/data/2.5/forecast?lat={lat}&lon={lon}&appid={API key}">
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-  <script>
-  $( function() {
-    $( "#accordion" ).accordion();
-  } );
-  </script>
 </head>
+
+
 <body background="./images/manDown.jpg">
- 
-<div id="accordion">
-  <h3>Forest Lake</h3>
-  <div>
-    <p>
-    Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-    ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-    amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-    odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-    </p>
+  <main>Minnesota Is Always Cold</main>
+  <div id="searchbar" :hover>
+    <input type="text" name="city" id="cityInput">
+    <button id="search" :hover>search</button>
   </div>
-  <h3>Section 2</h3>
+
+  <!-- Day 1 -->
+  <li class="box">
+    <img src="./images/cloud.png" class="currentweather" alt="cloud">
+    <div class="Cold">Always a Chance of Snow!!!</div>
+    <div class="City"></div>
+
+    <div class="lineItem1"> Date:
+      <p class="currentforecastDate"></p>
+    </div>
+
+    <div class="lineItem2">High:
+      <p class="currentHigh"></p>
+    </div>
+
+    <div class="LineItem3">Low:
+      <p class="currentLow"></p>
+    </div>
+
+    <div class="lineItem4">Humidity:
+      <p class="currentHumidity"></p>
+    </div>
+
+    <div class="lineItem5">Windspeed:
+      <p class="currentWindspeed"></p>
+    </div>
+  </li>
+
   <div>
-    <p>
-    Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
-    purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
-    velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
-    suscipit faucibus urna.
-    </p>
-  </div>
-  <h3>Section 3</h3>
-  <div>
-    <p>
-    Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
-    Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
-    ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
-    lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
-    </p>
     <ul>
-      <li>List item one</li>
-      <li>List item two</li>
-      <li>List item three</li>
+      
+      <!-- Day 2 -->
+      <li class="box">
+        <img src="./images/cloud.png" class="weatherIcon" alt="cloud">
+        <div class="Cold">Always a Chance of Snow!!!</div>
+        <div class="CityName"></div>
+
+        <div class="lineItem1"> Date:
+          <p class="forecastDate"></p>
+        </div>
+
+        <div class="lineItem2">High:
+          <p class="High"></p>
+        </div>
+
+        <div class="LineItem3">Low:
+          <p class="Low"></p>
+        </div>
+
+        <div class="lineItem4">Humidity:
+          <p class="Humidity"></p>
+        </div>
+
+        <div class="lineItem5">Windspeed:
+          <p class="Windspeed"></p>
+        </div>
+      </li>
+      <!-- Day 3 -->
+      <li class="box">
+        <img src="./images/cloud.png" class="weatherIcon" alt="cloud">
+        <div class="Cold">Always a Chance of Snow!!!</div>
+        <div class="CityName"></div>
+
+        <div class="lineItem1"> Date:
+          <p class="forecastDate"></p>
+        </div>
+
+        <div class="lineItem2">High:
+          <p class="High"></p>
+        </div>
+
+        <div class="LineItem3">Low:
+          <p class="Low"></p>
+        </div>
+
+        <div class="lineItem4">Humidity:
+          <p class="Humidity"></p>
+        </div>
+
+        <div class="lineItem5">Windspeed:
+          <p class="Windspeed"></p>
+        </div>
+      </li>
+      <!-- Day 4 -->
+      <li class="box">
+        <img src="./images/cloud.png" class="weatherIcon" alt="cloud">
+        <div class="Cold">Always a Chance of Snow!!!</div>
+        <div class="CityName"></div>
+
+        <div class="lineItem1"> Date:
+          <p class="forecastDate"></p>
+        </div>
+
+        <div class="lineItem2">High:
+          <p class="High"></p>
+        </div>
+
+        <div class="LineItem3">Low:
+          <p class="Low"></p>
+        </div>
+
+        <div class="lineItem4">Humidity:
+          <p class="Humidity"></p>
+        </div>
+
+        <div class="lineItem5">Windspeed:
+          <p class="Windspeed"></p>
+        </div>
+      </li>
+      <!-- Day 5 -->
+      <li class="box">
+        <img src="./images/cloud.png" class="weatherIcon" alt="cloud">
+        <div class="Cold">Always a Chance of Snow!!!</div>
+        <div class="CityName"></div>
+
+        <div class="lineItem1"> Date:
+          <p class="forecastDate"></p>
+        </div>
+
+        <div class="lineItem2">High:
+          <p class="High"></p>
+        </div>
+
+        <div class="LineItem3">Low:
+          <p class="Low"></p>
+        </div>
+
+        <div class="lineItem4">Humidity:
+          <p class="Humidity"></p>
+        </div>
+
+        <div class="lineItem5">Windspeed:
+          <p class="Windspeed"></p>
+        </div>
+      </li>
+      <!-- Day 6 -->
+      <li class="box">
+        <img src="./images/cloud.png" class="weatherIcon" alt="cloud">
+        <div class="Cold">Always a Chance of Snow!!!</div>
+        <div class="CityName"></div>
+
+        <div class="lineItem1"> Date:
+          <p class="forecastDate"></p>
+        </div>
+
+        <div class="lineItem2">High:
+          <p class="High"></p>
+        </div>
+
+        <div class="LineItem3">Low:
+          <p class="Low"></p>
+        </div>
+
+        <div class="lineItem4">Humidity:
+          <p class="Humidity"></p>
+        </div>
+
+        <div class="lineItem5">Windspeed:
+          <p class="Windspeed"></p>
+        </div>
+      </li>
     </ul>
+    <script src="./Java/script.js"></script>
   </div>
-  <h3>Section 4</h3>
-  <div>
-    <p>
-    Cras dictum. Pellentesque habitant morbi tristique senectus et netus
-    et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
-    faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
-    mauris vel est.
-    </p>
-  <h3>Section 4</h3>
-  <div>
-    <p>
-    Cras dictum. Pellentesque habitant morbi tristique senectus et netus
-    et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
-    faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
-    mauris vel est.
-    </p>
-  <p>
-    Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
-    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-    inceptos himenaeos.
-    </p>
-  </div>
-  <script src="./Java/script.js"></script>
-</div>
- 
- 
+
+
 </body>
+
 </html>
 
 <!-- GIVEN a weather dashboard with form inputs
